fixed checkout tests

--- a/app/views/checkouts/billing.html.erb
+++ b/app/views/checkouts/billing.html.erb
@@ -323,6 +323,10 @@
 										<td colspan="3" align="right">Shipping Rate</td>
 										<td class="total" colspan="2"><b class="cart_shipping">---</b></td>
 									</tr>
+									<tr class="savings_row">
+										<td colspan="3" align="right">Savings</td>
+										<td class="total" colspan="2"><b class="cart_savings">---</b></td>
+									</tr>
 									<tr>
 										<td colspan="3" align="right">Tax</td>
 										<td class="total" colspan="2"><b class="cart_tax">---</b></td>
