--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -128,17 +128,8 @@
 
                 </ul>
 
-								<div class="float-right">
-									<ul class="nav navbar-nav">
-		                
-										<% if current_user %>
-											<li class="float-right"><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-										<% else %>
-											<li class="float-right"><%= link_to "Log in", new_user_session_path %></li>
-											<li class="float-right"><%= link_to "Sign up", new_user_registration_path %></li>
-										<% end %>
-										<li class="float-right"><%= link_to "Shopping Cart", checkout_path %></li>
-									</ul>
+								<div class="float-right navbar-container">
+									<%= render 'shared/navbar' %>
 								</div>
             </div>
         </div>
