--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,14 +15,20 @@
         		<div class="col-lg-12 col-sm-12">
             		<span class="title"><%= @product.name %></span>
             	</div>
+
 	            <div class="col-lg-12 col-sm-12 hero-feature">
-            		<div class="sp-wrap">
-						<a href="images/detail1.jpg"><img src="images/detail1-s.jpg" alt=""></a>
-						<a href="images/detail2.jpg"><img src="images/detail2-s.jpg" alt=""></a>
-						<a href="images/detail3.jpg"><img src="images/detail3-s.jpg" alt=""></a>
-						<a href="images/detail1.jpg"><img src="images/detail1-s.jpg" alt=""></a>
-						<a href="images/detail2.jpg"><img src="images/detail2-s.jpg" alt=""></a>
+								<div class="col-lg-6">
+									<br>
+								<div class="sp-wrap" style="display: inline-block;">
+            		<div class='sp-large' style="background: none;">
+									<% @product.product_images.each do |product_image| %>
+										<%= link_to image_tag(product_image.image_url, width: "396", height: "400"), product_image.image_url %>
+									<% end %>
+								</div>
+								
 					</div>
+					</div>
+					<div class="col-lg-6">
 					<h4><%= @product.name %></h4>
 
 					<hr/>
@@ -56,6 +62,7 @@
 					<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=xa-4f0c254f1302adf8"></script>
 	            </div>
 	            <div class="clearfix"></div>
+						</div>
 							<% if !@product.collections.empty? && !(@product.collections.first.products - [@product]).empty? %>
 	            <div class="col-lg-12 col-sm-12">
             		<span class="title">RELATED PRODUCTS</span>
