--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -114,17 +114,8 @@
 												<%= link_to "#{collection.name} Tents", collection_path(collection) %>
 											</li>
 										<% end %>
-                    <li class="nav-dropdown">
-                    	<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							Pages <span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-							<li><a href="about.html">About Us</a></li>
-							<li><a href="contact.html">Contact Us</a></li>
-							<li><a href="typography.html">Typography</a></li>
-						</ul>
-                    </li>
-										
+										<li><%= link_to "About Us", about_us_path %></li>
+                    
 
                 </ul>
 
@@ -135,48 +126,50 @@
         </div>
     </nav>
     <!-- End Navigation -->
-	
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
+	<% if !notice.blank? %>
+		<p class="alert alert-info"><%= notice %></p>
+	<% end %>
+  
+	<% if !alert.blank? %>
+	  <p class="alert alert-error"><%= alert %></p>
+	<% end %>
+		
 <%= yield %>
 
 	<footer>
     	<div class="container">
-        	<div class="col-lg-3 col-md-3 col-sm-6">
+        	<div class="col-lg-4 col-md-3 col-sm-6">
         		<div class="column">
         			<h4>Information</h4>
         			<ul>
-        				<li><a href="about.html">About Us</a></li>
-        				<li><a href="typography.html">Policy Privacy</a></li>
-        				<li><a href="typography.html">Terms and Conditions</a></li>
-        				<li><a href="typography.html">Shipping Methods</a></li>
+        				<li><%= link_to "About Us", about_us_path %></li>
+        				<li><%= link_to "Privacy Policy", privacy_policy_path %></li>
+        				<li><%= link_to "Terms and Conditions", terms_and_conditions_path %></li>
+        				<li>UPS Shipping</a></li>
         			</ul>
         		</div>
         	</div>
-        	<div class="col-lg-3 col-md-3 col-sm-6">
+        	<div class="col-lg-4 col-md-3 col-sm-6">
         		<div class="column">
-        			<h4>Categories</h4>
+        			<h4>Collections</h4>
         			<ul>
-        				<li><a href="catalogue.html">Cras justo odio</a></li>
-        				<li><a href="catalogue.html">Dapibus ac facilisis in</a></li>
-        				<li><a href="catalogue.html">Morbi leo risus</a></li>
-        				<li><a href="catalogue.html">Porta ac consectetur ac</a></li>
+								<% Collection.active.each do |collection| %>
+									<li><%= link_to collection.name, collection_path(collection) %></li>
+								<% end %>
         			</ul>
         		</div>
         	</div>
-        	<div class="col-lg-3 col-md-3 col-sm-6">
+        	<div class="col-lg-4 col-md-3 col-sm-6">
         		<div class="column">
         			<h4>Customer Service</h4>
         			<ul>
-        				<li><a href="contact.html">Contact Us</a></li>
-        				<li><a href="#">YM: erwin_heldy</a></li>
-        				<li><a href="#">Telp: 087825376xxx</a></li>
-        				<li><a href="#">Email: erwin.heldy@gmail.com</a></li>
+        				<li><%= link_to "Contact Us", contact_us_path %></li>
+        				<li><a href="#">YM: toddler_tents </a></li>
+        				<li><a href="#">Email: customerservice@toddlertents.com</a></li>
         			</ul>
         		</div>
         	</div>
-        	<div class="col-lg-3 col-md-3 col-sm-6">
+        	<!-- <div class="col-lg-3 col-md-3 col-sm-6">
         		<div class="column">
         			<h4>Follow Us</h4>
         			<ul class="social">
@@ -186,7 +179,7 @@
         				<li><a href="#">RSS Feed</a></li>
         			</ul>
         		</div>
-        	</div>
+        	</div> -->
         </div>
         <div class="navbar-inverse text-center copyright">
         	Copyright &copy; 2013 Mimity All right reserved
