--- a/app/views/order_mailer/confirmation_email.html.erb
+++ b/app/views/order_mailer/confirmation_email.html.erb
@@ -1,1 +1,16 @@
-Thank you for your order, <%= @order.user.email %>. Your order number is <%= @order.id %>.
+
+<p>Dear <%= @order.billing_address.full_name %>,</p>
+<p>
+Thank you for placing an order at toddlertents.com! Your order will be shipped shortly. If you have any questions or concerns, please email us at customerservice@toddlertents.com and a representative will be at your service. Your order was placed on <%= @order.order_date.strftime("%m/%d/%Y") %> using the account <%= @order.user.email %>.
+</p>
+
+<p>
+We appreciate your business and hope you come again!
+</p>
+
+
+
+<p>Sincerely,</p>
+<p>Edmund Mai</p>
+<p>Business Development Manager</p>
+<%= link_to "Toddler Tents", root_url %>
