--- a/app/views/shared/_best_seller.html.erb
+++ b/app/views/shared/_best_seller.html.erb
@@ -1,6 +1,6 @@
 <div class="col-lg-12 col-md-12 col-sm-6">
 	<div class="no-padding">
-		<span class="title">BEST SELLER</span>
+		<span class="title">BEST SELLERS</span>
 	</div>
 	<div class="hero-feature">
 		<%= render partial: "shared/product_thumbnail", locals: {product: Product.last} %>
