--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+	<meta name="description" content="Recreational tents for babies and adolescents, made for both indoor and outdoor enjoyment.">
+	<meta name="keywords" content="toddler, tents, tent, baby tents, play tents, kids tents">
 </head>
 <body>
 	<header>
