--- a/app/views/checkouts/review.html.erb
+++ b/app/views/checkouts/review.html.erb
@@ -1,4 +1,39 @@
-<h3>
-	Thank you for your ordering at iLook
-	<%= link_to "Continue Shopping", products_path %>
-</h3>
+    <div class="container main-container">
+        <div class="row">
+        	<div class="col-lg-3 col-md-3 col-sm-12">
+
+				<!-- RECENT PRODUCT -->
+				<div class="col-lg-12 col-md-12 col-sm-12 visible-lg visible-md">
+
+				</div>
+				<!-- End RECENT PRODUCT -->
+
+        	</div>
+
+        	<div class="clearfix visible-sm"></div>
+
+			<!-- Cart -->
+        	<div class="col-lg-9 col-md-9 col-sm-12">
+        		<div class="col-lg-12 col-sm-12">
+								<h3 style="height:500px">
+									Thank you for your ordering at Toddler Tents. Your order will be processed shortly. You will receive a confirmation email. If you have any questions or concerns, please email us at customerservice@toddlertents.com or <%= link_to "click here", contact_us_path %>
+									
+									<br>
+									You will be redirected to the home page automatically in 5 seconds.
+									<br>
+									<%= link_to "Continue Shopping", root_path %>
+								</h3>
+            	</div>
+	           
+        	</div>
+        	<!-- End Cart -->
+
+
+        </div>
+	</div>
+
+<script>
+window.setTimeout(function() {
+location.href = "/"
+}, 4000);
+</script>
