added stripe integration

--- a/app/views/checkouts/submit_order.js.erb
+++ b/app/views/checkouts/submit_order.js.erb
@@ -1,9 +1,9 @@
 $("#submit_spinner").hide();
-$(".payment_info_first_part :input").attr("disabled", false);
-$(".payment_info_second_part :input").attr("disabled", true);
+$(".payment_info :input").attr("disabled", false);
+$(".order_info :input").attr("disabled", true);
 
 $(".payment_info_errors").empty();
-$(".payment_info_errors").append("<li><%= @usaepay.result %></li>");
-$(".payment_info_errors").append("<li><%= @usaepay.error %></li>");
+$(".payment_info_errors").append("<li><%= @failure_message %></li>");
+
 
 jQuery('html,body').animate({scrollTop:0},300);
