--- a/app/views/order_mailer/confirmation_email.html.erb
+++ b/app/views/order_mailer/confirmation_email.html.erb
@@ -1,5 +1,5 @@
 
-<p>Dear <%= @order.billing_address.full_name %>,</p>
+<p>Dear <%= @order.billing_address.try(:full_name) %>,</p>
 <p>
 Thank you for placing an order at toddlertents.com! Your order will be shipped shortly. If you have any questions or concerns, please email us at customerservice@toddlertents.com and a representative will be at your service. Your order was placed using the account <%= @order.user.email %>.
 </p>
