--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
 
 			<!-- Cart -->
         	<div class="col-lg-9 col-md-9 col-sm-12" style="height: 500px;">
-        		<div class="col-lg-4 col-sm-12">
+        		<div class="col-lg-4 col-sm-12 login_div">
 								<h2>Log in</h2>
 
 								<%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
@@ -31,10 +31,10 @@
 								  <div><%= f.submit "Sign in" %></div>
 								<% end %>
 
-
+								<%= render "devise/shared/links" %>
             	</div>
 
-        		<div class="col-lg-6 col-sm-12">
+        		<div class="col-lg-6 col-sm-12 sign_up_div">
 								<h2>Sign up</h2>
 
 								<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
