make sign in page nicer and added states rake task

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,3 +24,10 @@
 .float-right {
 	float: right;
 }
+
+.baby-background {
+	background-image: asset-url('baby.jpg');
+	background-size: 1200px 1500px;
+	background-repeat: no-repeat;
+	background-position: 0px -500px;
+}
