--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -134,7 +134,7 @@
 	<% end %>
   
 	<% if !alert.blank? %>
-	  <p class="alert alert-error"><%= alert %></p>
+	  <p class="alert alert-danger"><%= alert %></p>
 	<% end %>
 		
 <%= yield %>
