--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -1,4 +1,8 @@
-    <div class="container main-container">
+    <% content_for :title do %>
+			<%= @collection.name %>
+		<% end %>    
+		
+		<div class="container main-container">
         <div class="row">
         	<div class="col-lg-3 col-md-3 col-sm-12">
 
