--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -119,11 +119,20 @@
                 <ul class="nav navbar-nav">
                     <li><%= link_to "Home", root_path %></li>
                     
-										<% Collection.all.each do |collection| %>
-											<li>
-												<%= link_to collection.name, collection_path(collection) %>
-											</li>
-										<% end %>
+				            <li class="nav-dropdown">
+				              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+												Collections <span class="caret"></span>
+											</a>
+											<ul class="dropdown-menu">
+												<% Collection.all.each do |collection| %>
+													<li>
+														<%= link_to collection.name, collection_path(collection) %>
+													</li>
+												<% end %>
+											</ul>
+				            </li>
+										
+
 										<li><%= link_to "About Us", about_us_path %></li>
                     
 
