--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -8,13 +8,13 @@
                 <div class="slider">
                     <ul class="bxslider">
                         <li>
-													<%= link_to image_tag("Twins-In-A-Tent-515275.jpg"), root_path %>
+													<%= link_to image_tag("Twins-In-A-Tent-515275.jpg"), collection_path(@playhouse_collection) %>
                         </li>
                         <li>
-													<%= link_to image_tag("Beach-boy.jpg"), root_path %>
+													<%= link_to image_tag("Beach-boy.jpg"), collection_path(@adventure_collection) %>
                         </li>
                         <li>
-													<%= link_to image_tag("Girl-playing-with-balls.jpg"), root_path %>
+													<%= link_to image_tag("Girl-playing-with-balls.jpg"), collection_path(@playhouse_collection) %>
                         </li>
                     </ul>
                 </div>
