added automatic mailer for giga tents

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -46,7 +46,7 @@ select{border:1px solid #ddd;padding:3px}
 body{
 	font-family: 'source_sans_proregular';
 	color:#333;
-	background: #f1f1f1
+	background: rgb(239,249,255);
 }
 .main-container{
 	padding-top: 20px;
@@ -54,7 +54,7 @@ body{
 }
 header{
 	padding-top: 10px;
-	background: #f1f1f1;
+	background: rgb(239,249,255);
 }
 header .well{
 	-webkit-box-shadow: none;
