--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,3 +31,12 @@
 	background-repeat: no-repeat;
 	background-position: 30px -500px;
 }
+
+th {
+	width: 5%;
+}
+
+.alert-danger {
+	list-style: none;
+}
+
