--- a/app/views/returns/show.html.erb
+++ b/app/views/returns/show.html.erb
@@ -1,23 +1,51 @@
-<%= link_to "All Orders", orders_path %><br>
 
 
-<%= link_to "View Return Slip", order_return_path(@return.order, @return, format: :pdf) %>
-<h3>Return Info</h3>
+<div class="container main-container">
+	<div class="row">
+		<div class="col-lg-3 col-md-3 col-sm-12">
+
+			<!-- RECENT PRODUCT -->
+			<div class="col-lg-12 col-md-12 col-sm-12 visible-lg visible-md">
+				<%= render "shared/best_seller" %>
+			</div>
+			<!-- End RECENT PRODUCT -->
+
+		</div>
+
+		<div class="clearfix visible-sm"></div>
+
+		<!-- Cart -->
+		<div class="col-lg-9 col-md-9 col-sm-12" style="height: 700px;">
+			<div class="col-lg-12 col-sm-12">
+				<%= link_to "All Orders", orders_path %><br>
+
+
+				
+				<h2><%= link_to "Print Return Slip", order_return_path(@return.order, @return, format: :pdf) %></h2>
+				<h3>Return Info</h3>
 	
 	
 
-<div>Order ID: <%= @return.order_id %></div>
-<div>Status: <%= @return.status %></div>
-<div>Amount Returned: <%= humanized_money_with_symbol @return.amount %></div>
-<div>Reason: <%= @return.reason %></div>
-<div>RMA Code: <%= @return.rma_code %></div>
-<div>Admin Comment: <%= @return.admin_comment %></div>
+				<div>Order ID: <%= @return.order_id %></div>
+				<div>Status: <%= @return.status %></div>
+				<div>Amount Returned: <%= humanized_money_with_symbol @return.amount %></div>
+				<div>Reason: <%= @return.reason %></div>
+				<div>RMA Code: <%= @return.rma_code %></div>
+				<div>Admin Comment: <%= @return.admin_comment %></div>
 
-<h3>Items:</h3>
-<% @return.return_items.each do |return_item| %>
-<div>
-	Quantity: <%= return_item.quantity %>
-	<%= return_item.line_item.variant.product.name %> -  <%= return_item.line_item.variant.color.name %> -
-	<%= return_item.line_item.variant.size.name %>
+				<h3>Items:</h3>
+				<% @return.return_items.each do |return_item| %>
+				<div>
+					Quantity: <%= return_item.quantity %>
+					<%= return_item.line_item.variant.product.name %> -  <%= return_item.line_item.variant.color.name %> -
+					<%= return_item.line_item.variant.size.name %>
+				</div>
+				<% end %>
+				
+
+
+		</div>
+	</div>
 </div>
-<% end %>
+
+
