--- a/app/views/checkouts/review.html.erb
+++ b/app/views/checkouts/review.html.erb
@@ -20,10 +20,10 @@
         	<div class="col-lg-9 col-md-9 col-sm-12">
         		<div class="col-lg-12 col-sm-12">
 								<h3 style="height:500px">
-									Thank you for your ordering at Toddler Tents. Your order will be processed shortly. You will receive a confirmation email. If you have any questions or concerns, please email us at customerservice@toddlertents.com or <%= link_to "click here", contact_us_path %>
+									Thank you for your ordering at Toddler Tents. Your order will be processed shortly. You will receive a confirmation email. If you have any questions or concerns, please email us at customerservice@toddlertents.com or <%= link_to "click here", contact_us_path %>.
 									
 									<br>
-									You will be redirected to the home page automatically in 5 seconds.
+									You will be redirected to the home page automatically in 10 seconds.
 									<br>
 									<%= link_to "Continue Shopping", root_path %>
 								</h3>
@@ -39,5 +39,5 @@
 <script>
 window.setTimeout(function() {
 location.href = "/"
-}, 4000);
+}, 10000);
 </script>
