--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,31 +1,58 @@
-<%= link_to "Account Settings", account_path %>
 
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="container main-container">
+	<div class="row">
+		<div class="col-lg-3 col-md-3 col-sm-12">
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+			<!-- RECENT PRODUCT -->
+			<div class="col-lg-12 col-md-12 col-sm-12 visible-lg visible-md">
+				<%= render "shared/best_seller" %>
+			</div>
+			<!-- End RECENT PRODUCT -->
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+		</div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+		<div class="clearfix visible-sm"></div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+		<!-- Cart -->
+		<div class="col-lg-9 col-md-9 col-sm-12" style="height: 700px;">
+			<div class="col-lg-12 col-sm-12">
+				<%= link_to "Account Settings", account_path %>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+				<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-  <div><%= f.submit "Update" %></div>
-<% end %>
+				<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+				  <%= devise_error_messages! %>
 
-<h3>Cancel my account</h3>
+				  <div><%= f.label :email %><br />
+				  <%= f.email_field :email, autofocus: true %></div>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+				  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+				    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+				  <% end %>
 
-<%= link_to "Back", :back %>
+				  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+				    <%= f.password_field :password, autocomplete: "off" %></div>
+
+				  <div><%= f.label :password_confirmation %><br />
+				    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+
+				  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+				    <%= f.password_field :current_password, autocomplete: "off" %></div>
+
+				  <div><%= f.submit "Update" %></div>
+				<% end %>
+
+				<h3>Cancel my account</h3>
+
+				<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+				<%= link_to "Back", :back %>
+				
+
+
+		</div>
+	</div>
+</div>
+
+
