--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,49 +1,79 @@
-<%= link_to "Account Settings", account_path %>
-
-<h1>Orders</h1>
-
-<%= will_paginate @orders %>
-<table>
-	<thead>
-<th>ID</th>
-<th>Order Date</th>
-<th>Status</th>
-<th>Email</th>
-<th>Total</th>
-</thead>
-<% @orders.each do |order| %>
-<tr>
-
-	<td><%= link_to order.id, order_path(order) %></td>
-	<td><%= order.order_date.try(:strftime, "%m/%d/%Y") %></td>
-	<td><%= order.status %></td>
-	<td><%= order.user.guest? ? order.user.guest_email : order.user.email %></td>
-	<td><%= humanized_money_with_symbol order.total %></td>
-
-</tr>
-<% end %>
-</table>
 
 
-<h1>Returns</h1>
+<div class="container main-container">
+	<div class="row">
+		<div class="col-lg-3 col-md-3 col-sm-12">
 
-<table>
-	<thead>
-<th>ID</th>
-<th>Order ID</th>
-<th>Date</th>
-<th>Status</th>
-<th>Amount Returned</th>
-</thead>
-<% @returns.each do |r| %>
-<tr>
+			<!-- RECENT PRODUCT -->
+			<div class="col-lg-12 col-md-12 col-sm-12 visible-lg visible-md">
+				<%= render "shared/best_seller" %>
+			</div>
+			<!-- End RECENT PRODUCT -->
 
-	<td><%= link_to r.id, order_return_path(r.order_id, r) %></td>
-	<td><%= r.order_id %></td>
-	<td><%= r.created_at.strftime("%m/%d/%Y") %></td>
-	<td><%= r.status %></td>
-	<td><%= humanized_money_with_symbol r.amount %></td>
+		</div>
 
-</tr>
-<% end %>
-</table>
+		<div class="clearfix visible-sm"></div>
+
+		<!-- Cart -->
+		<div class="col-lg-9 col-md-9 col-sm-12" style="height: 700px;">
+			<div class="col-lg-12 col-sm-12">
+				<%= link_to "Account Settings", account_path %>
+
+				<h1>Orders</h1>
+				<% if @orders.empty? %>
+					You have not placed any orders. <%= link_to "Start shopping!", root_path %>
+				<% else %>
+				<%= will_paginate @orders %>
+				<table class="past_orders_table">
+					<thead>
+				<th>ID</th>
+				<th>Order Date</th>
+				<th>Status</th>
+				<th>Email</th>
+				<th>Total</th>
+				</thead>
+				<% @orders.each do |order| %>
+				<tr>
+
+					<td><%= link_to order.id, order_path(order) %></td>
+					<td><%= order.order_date.try(:strftime, "%m/%d/%Y") %></td>
+					<td><%= order.status %></td>
+					<td><%= order.user.guest? ? order.user.guest_email : order.user.email %></td>
+					<td><%= humanized_money_with_symbol order.total %></td>
+
+				</tr>
+				<% end %>
+				</table>
+				<% end %>
+
+				<h1>Returns</h1>
+				<% if @returns.empty? %>
+					<h3>You have no returns.</h3>
+				<% else %>
+				<table class="returns_table">
+					<thead>
+				<th>ID</th>
+				<th>Order ID</th>
+				<th>Date</th>
+				<th>Status</th>
+				<th>Amount Returned</th>
+				</thead>
+				<% @returns.each do |r| %>
+				<tr>
+
+					<td><%= link_to r.id, order_return_path(r.order_id, r) %></td>
+					<td><%= r.order_id %></td>
+					<td><%= r.created_at.strftime("%m/%d/%Y") %></td>
+					<td><%= r.status %></td>
+					<td><%= humanized_money_with_symbol r.amount %></td>
+
+				</tr>
+				<% end %>
+				</table>
+				<% end %>
+
+		</div>
+	</div>
+</div>
+
+
