--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,7 @@
 <ul class="nav navbar-nav">
 		                
 	<% if current_user %>
+	<li class="float-right"><%= link_to "My Account", account_path %></li>
 	<li class="float-right"><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
 	<% else %>
 	<li class="float-right"><%= link_to "Log in", new_user_session_path %></li>
