changed sign in background pic

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,10 +26,10 @@
 }
 
 .baby-background {
-	background-image: asset-url('baby.jpg');
-	background-size: 1100px 1500px;
+	background-image: asset-url('family-picture.jpg');
+//	background-size: 1100px 1500px;
 	background-repeat: no-repeat;
-	background-position: 30px -500px;
+	background-position: 0px -190px;
 }
 
 th {
