added po number to order

--- a/app/views/warehouse_mailer/order.html.erb
+++ b/app/views/warehouse_mailer/order.html.erb
@@ -11,7 +11,7 @@
 <br>
 <p>Dear Giga Tent,<p>
 <p>
-  I would like to place a drop ship order for the following items:
+  I would like to place a drop ship order (PO Number: <%= @order.po_number %>) for the following items:
 </p>
 
 <% @order.line_items.each do |line_item| %>
