--- a/app/views/checkouts/review.html.erb
+++ b/app/views/checkouts/review.html.erb
@@ -41,3 +41,22 @@ window.setTimeout(function() {
 location.href = "/"
 }, 10000);
 </script>
+
+<!-- Google Code for Sales Conversion Page -->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 966445347;
+var google_conversion_language = "en";
+var google_conversion_format = "3";
+var google_conversion_color = "ffffff";
+var google_conversion_label = "fawWCJWn0AoQo5LrzAM";
+var google_remarketing_only = false;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/966445347/?label=fawWCJWn0AoQo5LrzAM&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
