--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -192,7 +192,7 @@ footer .copyright{
 	color: #ccc;
 }
 .navbar{
-	background: #4a4a4a;
+	background: rgb(86, 119, 190);
 	margin-bottom: 0;
 }
 @media (min-width: 768px) {
