--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
 	</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <%= favicon_link_tag 'favicon.ico' %>
 	<meta name="description" content="Recreational tents for babies and adolescents, made for both indoor and outdoor enjoyment.">
 	<meta name="keywords" content="toddler, tents, tent, baby tents, play tents, kids tents">
+	
 </head>
 <body>
 	<header>
@@ -23,7 +25,7 @@
 	        <div class="row">
 
 	        	<!-- Logo -->
-	            <div class="col-lg-4 col-md-3 hidden-sm hidden-xs">
+	            <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
 	            	<div class="well logo">
 	            		<%= link_to root_path do %>
 										<%= image_tag "tents-logo.png", width: 300 %>
@@ -36,15 +38,15 @@
 	            <!-- End Logo -->
 
 				<!-- Search Form -->
-	            <div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
+	            <div class="col-lg-6 col-md-5 col-sm-7 col-xs-12">
 	            	<div class="well">
 	                    <form action="">
 	                        <div class="input-group">
-														<h4>
-															Let your little ones create a world of their own.
+														<h4 class="cute-font">
+															Let your little ones create a world of their own with great tents for even better prices!
 														</h4>
-														<h4>
-															Quality tents great for both indoors and outdoors.
+														<h4 class="cute-font">
+															
 														</h4>
 	                            <!-- <input type="text" class="form-control input-search" placeholder="Enter something to search"/>
 	                            <span class="input-group-btn">
