--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -15,7 +15,7 @@
 		<div class="clearfix visible-sm"></div>
 
 		<!-- Cart -->
-		<div class="col-lg-9 col-md-9 col-sm-12" style="height: 700px;">
+		<div class="col-lg-9 col-md-9 col-sm-12">
 			<div class="col-lg-12 col-sm-12">
 				<h1>
 					Account Settings
@@ -28,4 +28,5 @@
 
 		</div>
 	</div>
+</div>
 </div>
