--- a/app/views/checkouts/billing.html.erb
+++ b/app/views/checkouts/billing.html.erb
@@ -7,7 +7,7 @@
 		<div class="col-lg-3 col-md-3 col-sm-12">
 
 			<!-- RECENT PRODUCT -->
-			<div class="col-lg-12 col-md-12 col-sm-12">
+			<div class="col-lg-12 col-md-12 hidden-sm hidden-xs">
 				<div class="no-padding">
 					<span class="title">RECENT PRODUCT</span>
 				</div>
