--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,5 +1,46 @@
-<% @collections.each do |collection| %>
+    <% content_for :title do %>
+			Collections
+		<% end %>
+		
+		<div class="container main-container">
+        <div class="row">
+        	<div class="col-lg-3 col-md-3 col-sm-12">
 
-	<%= link_to collection.name, collection_path(collection) %>
+				<!-- Best Seller -->
+				<%= render "shared/best_seller" %>
+				<!-- End Best Seller -->
 
-<% end %>
+        	</div>
+
+        	<div class="clearfix visible-sm"></div>
+
+			<!-- Product Detail -->
+	        		<div class="col-lg-12 col-md-12 col-sm-6">
+		        		<div class="no-padding">
+		            		<span class="title">COLLECTIONS</span>
+		            	</div>
+						<div class="list-group list-categ">
+							<% Collection.all.each do |collection| %>
+								<%= link_to collection.name, collection_path(collection), class: "list-group-item" %>
+							<% end %>
+							<!-- <a href="catalogue.html" class="list-group-item">Cras justo odio</a>
+							<a href="catalogue.html" class="list-group-item">Dapibus ac facilisis in</a>
+							<a href="catalogue.html" class="list-group-item">Morbi leo risus</a>
+							<a href="catalogue.html" class="list-group-item">Porta ac consectetur ac</a>
+							<a href="catalogue.html" class="list-group-item">Vestibulum at eros</a>
+							<a href="catalogue.html" class="list-group-item">Cras justo odio</a>
+							<a href="catalogue.html" class="list-group-item">Dapibus ac facilisis in</a>
+							<a href="catalogue.html" class="list-group-item">Vestibulum at eros</a>
+							<a href="catalogue.html" class="list-group-item">Cras justo odio</a>
+							<a href="catalogue.html" class="list-group-item">Dapibus ac facilisis in</a> -->
+						</div>
+					</div>
+        	<!-- End Product Detail -->
+
+
+        </div>
+	</div>
+
+
+
+
