added css template for admin section and age_group for products

--- a/app/views/admin/coupons/index.html.erb
+++ b/app/views/admin/coupons/index.html.erb
@@ -1,5 +1,6 @@
-<%= link_to "New Coupon", new_admin_coupon_path %>
+<h1>Coupons</h1>
 
+<%= link_to "New Coupon", new_admin_coupon_path %>
 
 <%= will_paginate @coupons %>
 
