--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -7,11 +7,16 @@
 	</div>
 	<div class="field">
 		<%= form.label :short_description %>
-		<%= form.text_area :short_description %>
+		<%= form.text_area :short_description, size: "30x10" %>
 	</div>
 	<div class="field">
 		<%= form.label :long_description %>
-		<%= form.text_area :long_description %>
+		<%= form.text_area :long_description, size: "30x10" %>
+	</div>
+	
+	<div class="field">
+		<%= form.label :age_group %>
+		<%= form.text_field :age_group %>
 	</div>
 	
 	<div class="field">
