--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,9 +10,14 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
+ *= require bootstrap
+ *= require font-awesome.min
+ *= require jquery.bxslider
+ *= require smoothproducts
+ *= require style
  *= require_self
  */
+
 @import 'style';
 @import 'font-awesome.min';
 
