fixed admin css

--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -18,11 +18,11 @@
 	</div>
 	<div class="field">
 		<%= form.label :short_description %>
-		<%= form.text_area :short_description %>
+		<%= form.text_area :short_description, size: "30x10" %>
 	</div>
 	<div class="field">
 		<%= form.label :long_description %>
-		<%= form.text_area :long_description %>
+		<%= form.text_area :long_description, size: "30x10" %>
 	</div>
 	
 	<div class="field">
