--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,9 @@
 <ul class="nav navbar-nav">
 		                
 	<% if current_user %>
+	<% if current_user.has_role?(:admin) %>
+	<li class="float-right"><%= link_to "Admin", admin_path %></li>
+	<% end %>
 	<li class="float-right"><%= link_to "My Account", account_path %></li>
 	<li class="float-right"><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
 	<% else %>
