fixed checkout css

--- a/app/views/checkouts/billing.html.erb
+++ b/app/views/checkouts/billing.html.erb
@@ -49,8 +49,12 @@
 				<ul class="user_info_errors">
 				</ul>
         
-				<%= link_to "Sign up", "", class: "checkout_sign_up_link" %>
+				<%= link_to "Sign up", "", class: "checkout_sign_up_link" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<%= link_to "Log in", "", class: "checkout_log_in_link" %>
+				<br>
+				<br>
+
+
 
 				<div class="sign_up_div">
 					<span class="title">SIGN UP</span>
