--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -121,7 +121,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- text logo on mobile view -->
-								<%= link_to "Collections", collections_path, class: "navbar-brand visible-xs" %>
+								<%= link_to "Shopping Cart", checkout_path, class: "navbar-brand visible-xs" %>
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
