--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,3 +51,14 @@ th {
 	text-align: center;
 }
 
+
+@media (max-width: 480px) {
+	.table > tbody > tr td {
+		display: inline-block;
+        width: 100%
+	}
+    .table > tbody > tr td input {
+		width: 100%
+	}
+}
+
