--- a/app/views/checkouts/show.html.erb
+++ b/app/views/checkouts/show.html.erb
@@ -21,6 +21,7 @@
             	</div>
 	            <div class="col-lg-12 col-sm-12 hero-feature">
 					<%= form_tag update_cart_checkout_path, method: :put do %>
+					<div class="table-responsive">
 					<table class="table table-bordered tbl-cart">
 						<thead>
                             <tr>
@@ -109,13 +110,26 @@
                             </tr>
                         </tbody>
 					</table>
-					<div class="btn-group btns-cart">
+					</div>
+					<div class="btn-group btns-cart pull-left">
 
 						<button type="button" class="btn btn-primary" onclick="window.location='/'"><i class="fa fa-arrow-circle-left"></i> Continue Shopping</button>
-						<% unless current_or_guest_user.cart.cart_items.empty? %>
+						<br class="visible-xs">
+						
+						<% if current_or_guest_user.cart.cart_items.empty? %>
+						</div>
+						<% else %>
 						<%= submit_tag "Update Cart", class: "btn btn-primary" %>
-						<%= button_tag(type: 'submit', class: "btn btn-primary") do %>
+						</div>
+						<div class="btn-group btns-cart pull-right">
+						
+						<br class="visible-xs">
+						<br class="visible-xs">
+					
+						<%= button_tag(type: 'submit', class: "btn btn-success btn-lg") do %>
 						Checkout <i class="fa fa-arrow-circle-right"></i>
+						<br class="visible-xs">
+						</div>
 						<% end %>
 						<%#= submit_tag "Checkout", class: "btn btn-primary" %>
 						<!-- <button type="button" class="btn btn-primary">Update Cart</button>
