fixed shopping cart table

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,7 +53,7 @@ th {
 
 
 @media (max-width: 480px) {
-	.table > tbody > tr td {
+	.table.tbl-checkout > tbody > tr td {
 		display: inline-block;
         width: 100%
 	}
