--- a/app/views/checkouts/show.html.erb
+++ b/app/views/checkouts/show.html.erb
@@ -4,7 +4,7 @@
 		
 		<div class="container main-container">
         <div class="row">
-        	<div class="col-lg-3 col-md-3 col-sm-12">
+        	<div class="col-lg-3 col-md-3 hidden-sm">
 
 				<!-- Best Seller -->
 				<%= render "shared/best_seller" %>
