--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,14 +25,22 @@
 	            <div class="col-lg-12 col-sm-12 hero-feature">
 								<div class="col-lg-6">
 									<br>
-								<div class="sp-wrap" style="display: inline-block;">
+								<div class="sp-wrap hidden-xs" style="display: inline-block;">
             		<div class='sp-large' style="background: none;">
 									<% @product.product_images.each do |product_image| %>
-										<%= link_to image_tag(product_image.image_url, width: "396", height: "400"), product_image.image_url %>
+										<%= link_to image_tag(product_image.image_url, class: "img-responsive"), product_image.image_url %>
 									<% end %>
 								</div>
+
 								
-					</div>
+								
+							</div>
+							
+							<div class="visible-xs">
+								<% @product.product_images.each do |product_image| %>
+									<%= link_to image_tag(product_image.image_url, class: "img-responsive"), product_image.image_url %>
+								<% end %>
+							</div>
 					</div>
 					<div class="col-lg-6">
 					<h3><%= @product.name %></h3>
