--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -165,18 +165,18 @@
 
 	<footer>
     	<div class="container">
-        	<div class="col-lg-4 col-md-3 col-sm-6">
+        	<div class="col-lg-3 col-md-3 col-sm-6">
         		<div class="column">
         			<h4>Information</h4>
         			<ul>
         				<li><%= link_to "About Us", about_us_path %></li>
         				<li><%= link_to "Privacy Policy", privacy_policy_path %></li>
         				<li><%= link_to "Terms and Conditions", terms_and_conditions_path %></li>
-        				<li>UPS Shipping</a></li>
+        				<li class="grey-color">FedEx Shipping</a></li>
         			</ul>
         		</div>
         	</div>
-        	<div class="col-lg-4 col-md-3 col-sm-6">
+        	<div class="col-lg-3 col-md-3 col-sm-6">
         		<div class="column">
         			<h4>Collections</h4>
         			<ul>
@@ -186,7 +186,7 @@
         			</ul>
         		</div>
         	</div>
-        	<div class="col-lg-4 col-md-3 col-sm-6">
+        	<div class="col-lg-3 col-md-3 col-sm-6">
         		<div class="column">
         			<h4>Customer Service</h4>
         			<ul>
@@ -194,6 +194,14 @@
         				<li><a href="#">YM: toddler_tents </a></li>
         				<li><a href="#">Email: customerservice@toddlertents.com</a></li>
         			</ul>
+        		</div>
+        	</div>
+        	<div class="col-lg-3 col-md-3 col-sm-6">
+        		<div class="column">
+        			<h4>Refund and Return Policy</h4>
+
+        				<ul><li class="grey-color">Returns and refunds for items can be made within 30 days of purchase.</li></ul>
+
         		</div>
         	</div>
         	<!-- <div class="col-lg-3 col-md-3 col-sm-6">
