--- a/app/views/shared/_best_seller.html.erb
+++ b/app/views/shared/_best_seller.html.erb
@@ -1,4 +1,4 @@
-<div class="col-lg-12 col-md-12 col-sm-12 hidden-xs">
+<div class="col-lg-12 col-md-12 hidden-sm hidden-xs">
 	<div class="no-padding">
 		<span class="title">BEST SELLERS</span>
 	</div>
