google merchant requirements

--- a/app/views/checkouts/billing.html.erb
+++ b/app/views/checkouts/billing.html.erb
@@ -241,7 +241,9 @@
 							
 							<div class="col-lg-12 col-sm-12">
 								<span class="title">CREDIT CARD</span>
+                <h6>*We accept Visa, MasterCard, American Express, JCB, Discover, and Diners Club.</h6>
 							</div>
+              
 							<div class="col-lg-12 col-sm-12 hero-feature payment_info">
 								<table class="table table-bordered tbl-checkout">
 									<tbody>
@@ -262,6 +264,7 @@
 											<td>
 												<%= f.text_field :credit_card_cvv, autocomplete: 'off', value: '', class: "form-control" %>
 											</td>
+                        
 										</tr>
 											</tbody>
 										</table>
