--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -198,9 +198,9 @@
         	</div>
         	<div class="col-lg-3 col-md-3 col-sm-6">
         		<div class="column">
-        			<h4>Return and Refund Policy</h4>
+        			<h4>Payment</h4>
 
-        				<ul><li class="grey-color">Returns and refunds for items can be made within 30 days of purchase.</li></ul>
+        				<ul><li class="grey-color">We accept debit and credit cards from Visa, MasterCard, American Express, JCB, Discover, and Diners Club.</li></ul>
 
         		</div>
         	</div>
