--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -75,7 +75,7 @@
           <br/>
           <br/>
           <br/>
-          <p>*We only accept credit and debit cards for payments through our secure payment system. Taxes only apply to orders shipping to New York state.</p>
+          <p>*Taxes only apply to orders shipping to New York state.</p>
 
 					<br/>
 					<hr/>
@@ -109,5 +109,6 @@
 
         </div>
 	</div>
+</div>
 
 
