--- a/app/views/site/terms_and_conditions.html.erb
+++ b/app/views/site/terms_and_conditions.html.erb
@@ -109,6 +109,22 @@
 								<p>
 									Any claim relating to Toddler Tents's web site shall be governed by the laws of the State of New York without regard to its conflict of law provisions.
 								</p>
+                
+								<h4>
+									9. Billing
+								</h4>
+
+								<p>
+									We accept debit and credit cards from Visa, MasterCard, American Express, JCB, Discover, and Diners Club. Cards are charged immediately once the purchase is made.
+								</p>
+                
+								<h4>
+									10. Return and Refund Policy
+								</h4>
+
+								<p>
+									Returns made within 30 days of purchase are allowed. Customers will be responsible for any shipping and handling costs. The dollar amount returned will vary based on the condition of each item. Only the value of the items will be refunded. Shipping costs and taxes won't be refunded. To make a return, you must log in, click "My Account" on the top navigation bar, click "Order History", select your order, click "Return items from this order", and proceed with the instructions.
+								</p>
 
 								<p>
 									General Terms and Conditions applicable to Use of a Web Site.
@@ -125,3 +141,4 @@
 
         </div>
 	</div>
+</div>
