--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,9 @@
 	                    <form action="">
 	                        <div class="input-group">
 														<h4 class="cute-font">
-															Let your little ones create a world of their own with great tents for even better prices!
+															<!-- Let your little ones create a world of their own with great tents for even better prices! Enter -->
+															The holidays are here, and it's a season for giving! Enter
+															<b class="blue">WINTER14</b> at checkout for 20% off! Limited time only.
 														</h4>
 														<h4 class="cute-font">
 															
